--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Estuary
 SEOTitle: Estuary | Welcome to estuary
 header-img: img/post-bg-universe.jpg
-email: supprot@open-estuary.org
+#email: support@open-esutary.org
 description: "Every failure is leading towards success."
 url: "http://open-estuary.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
