--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,9 @@ kramdown:
 
 # Gitalk
 gitalk:
-  enable: false    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
+  enable: true    #是否开启Gitalk评论
+  clientID: 22e60645d5113b244edc                            #生成的clientID
+  clientSecret: 7e3609ea29ebeaad2608fed9dcd19096c6d8b221    #生成的clientSecret
   repo: open-estuary.github.io    #仓库名称
   owner: open-estuary    #github用户名
   admin: open-estuary
